apps/demo/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: ealen/echo-server
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "200m"
              memory: "200Mi"
            limits:
              cpu: "200m"
              memory: "200Mi"
