apps/demo/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: alpha.k8s.local
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: demo-service
                port:
                  number: 4000
